--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,30 +14,82 @@
 
 @layer components {
   .cat {
-    @apply inline-flex h-[120px] w-[478px] cursor-pointer items-center justify-center bg-left bg-no-repeat pt-[27px] text-center text-2xl;
+    @apply inline-flex h-[120px] w-[478px] cursor-pointer items-center justify-center bg-left bg-no-repeat pt-[27px] text-center text-xl;
 
     &.blue-cat {
-      @apply bg-[url('/public/blue_cat_normal.png')]
+      padding-left: 92px;
+      @apply bg-[url('/public/blue_cat_normal.png')] text-secondary-200;
+
+      .cat-face {
+        top: 70px;
+        border-color: #FFCB2D transparent transparent transparent;
+        left: 50px;
+
+        &::before,
+        &::after {
+          background-color: #FFF9F6;
+        }
+      }
     }
     &.yellow-cat {
-      @apply bg-[url('/public/yellow_cat_normal.png')]
+      padding-right: 92px;
+      @apply bg-[url('/public/yellow_cat_normal.png')] text-secondary-300;
+
+      .cat-face {
+        top: 70px;
+        border-color: #FF60FA transparent transparent transparent;
+        right: 50px;
+
+        &::before,
+        &::after {
+          background-color: #5137FF;
+        }
+      }
     }
 
-    .cat-face {
+    &.active {
+      &.blue-cat {
+        @apply bg-[url('/public/blue_cat_ondrag.png')];
+      }
+      &.yellow-cat {
+        @apply bg-[url('/public/yellow_cat_ondrag.png')];
+      }
+    }
+  }
+
+  .cat-face {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 7px 5.5px 0 5.5px;
+
+    &::before,
+    &::after {
       position: absolute;
-      top: 0;
-      left: 28px;
+      top: -25px;
+      content: '';
+      display: inline-block;
+      border-radius: 16px;
+      width: 6px;
+      height: 12px;
+    }
+    &::before {
+      left: -23px
+    }
+
+    &::after {
+      left: 17px;
+    }
+
+    &.yellow-cat-face {
+      top: 54%;
+      border-color: #FF60FA transparent transparent transparent;
+      right: 50px;
+
       &::before,
       &::after {
-        content: '';
-        display: block;
-        border-radius: 16px;
-        width: 6px;
-        height: 12px;
-        background-color: #FFF9F6;
-      }
-      &::before {
-        margin-right: 35px;
+        background-color: #5137FF;
       }
     }
   }
